--- a/fundamentos-html/exercicios/ex01/index.html
+++ b/fundamentos-html/exercicios/ex01/index.html
@@ -31,7 +31,7 @@
     <em>Image source</em>: NASA
 
     <h2>Exploração Espacial</h2>
-    <p>Júpiter tem sido objeto de estudo e exploração pelas agências espaciais há várias décadas. A sonda espacial Voyager 1 fez uma passagem próxima por Júpiter em 1979, fornecendo as primeiras imagens detalhadas do planeta e suas luas. Mais tarde, as missões <em>Galileo</em>, <em>Juno</em> e outras trouxeram dados cruciais sobre a estrutura interna de Júpiter, seu campo magnético e suas tempestades.</p>
+    <p>Júpiter tem sido objeto de estudo e exploração pelas agências espaciais há várias décadas. A sonda espacial Voyager 1 fez uma passagem próxima por Júpiter em 1979, fornecendo as primeiras imagens detalhadas do planeta e suas luas. Mais tarde, as missões <em>Galileo, Juno</em> e outras trouxeram dados cruciais sobre a estrutura interna de Júpiter, seu campo magnético e suas tempestades.</p>
 
     <h2>Conclusão</h2>
     <p>Júpiter é verdadeiramente um colosso celestial que continua a intrigar os cientistas e entusiastas do espaço. Sua massa, tamanho e complexidade atmosférica o tornam um laboratório natural para entender a formação e a evolução de planetas gasosos. Além disso, suas luas e tempestades proporcionam uma visão fascinante da dinâmica planetária e do potencial de mundos alienígenas. À medida que a exploração espacial continua avançando, é provável que Júpiter ainda reserve muitas surpresas e segredos a serem revelados.</p>
