--- a/fundamentos-html/div-e-span/index.html
+++ b/fundamentos-html/div-e-span/index.html
@@ -7,11 +7,12 @@
 </head>
 <body>
     <h1>organização com div e span</h1>
-    <p>em um texto, o elemento div irá organizar o conteúdo em um bloco, ou seja, como uma queba de linha.
+    <p>em um texto, o elemento div irá organizar o conteúdo em 
+        <div>um bloco, ou seja, como uma queba de linha.</div>
         uma div ocupa todo o espaço horizontal disponivel na tela.
         já o elemento span irá organizar o conteúdo de forma "inline",
-        ou seja, sem quebra de linha e ocupa apenas
-        a largura do seu conteúdo interno.
+        ou seja, <span>sem quebra</span> de linha e ocupa apenas
+        <span>a largura do seu conteúdo interno</span>.
     </p>
 </body>
 </html>
