--- a/fundamentos-html/links/index.html
+++ b/fundamentos-html/links/index.html
@@ -36,6 +36,8 @@
         <a href="#titulo-6">titulo 6</a>
         <a href="#titulo-7">titulo 7</a>
     </div>
+
+    <p>acessar a página do <a href="https://google.com">google</a></p>
     
         <h2 id="titulo-1">Título 1</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus fugit rerum at rem. Nisi, debitis ad suscipit a dignissimos sed repellendus commodi reprehenderit excepturi, eos praesentium perspiciatis ipsa repellat?</p>
