--- a/fundamentos-html/exercicios/ex02/index.html
+++ b/fundamentos-html/exercicios/ex02/index.html
@@ -8,8 +8,10 @@
   <body>
     <h1>TechWare Solutions</h1>
 
-    <a href="servico.html">Serviços</a>
-    <a href="contato.html">Contato</a>
+    <nav>
+        <a href="servico.html">Serviços</a>
+        <a href="contato.html">Contato</a>
+    </nav>
 
       <h2>Bem-vindo à TechWare Solutions</h2> 
       <p>
