--- a/fundamentos-html/exercicios/ex02/servico.html
+++ b/fundamentos-html/exercicios/ex02/servico.html
@@ -7,8 +7,11 @@
   </head>
   <body>
     <h1>Nossos Serviços</h1>
-    <a href="index.html">página inicial</a>
-    <a href="contato.html">Contato</a>
+    
+    <nav>
+        <a href="index.html">página inicial</a>
+        <a href="contato.html">Contato</a>
+    </nav>
 
     <h2>Desenvolvimento de Software</h2>
     <p>
