--- a/listas/listas.html
+++ b/listas/listas.html
@@ -12,6 +12,58 @@
     <ol>
        <li>um Sonho de liberdade</li>
        <li>o poderoso chefão</li> 
+       <li>batman: o cavaleiro das trevas</li>
+       <li>o poderoso chefão 2</li>
+       <li>12 homens e uma sentença</li>
     </ol>
+
+    <p>lista não orndenada de filmes de animação:</p>
+    <ul>
+        <li>super mario bross</li>
+        <li>homem aranha no aranhaverso</li>
+        <li>divertidamente</li>
+        <li>coraline e o mundo secreto</li>
+        <li>planeta do tesouro</li>
+    </ul>
+
+    <h2>bolos</h2>
+    <ol>
+        <li>
+            <strong>bolos tradicionais</strong>
+            <ul>
+                <li>bolo de chocolate fofinho</li>
+                <li>bolo de cenoura com cobertura de chocolate</li>
+                <li>bolo de limçao com glacê de limão</li>
+            </ul>
+        </li>
+        <li>
+            <strong>bolos de festas</strong>
+            <ul>
+                <li>bolo de aniversario com recheio de frutas</li>
+                <li>bolo de casamento com flores de açúcar</li>
+                <li>bolo de natal com frutas cristalizada</li>
+            </ul>
+        </li>
+    </ol>
+
+    <h2>sobremesas</h2>
+    <ul>
+        <li>
+            <strong>sobremesas geladas</strong>
+            <ul>
+                <li>sorvete de chocolate caseiro</li>
+                <li>pudim de leite condensado</li>
+                <li>geelatinha colorida com creme</li>
+            </ul>
+        </li>
+        <li>
+            <strong>sobremesas especiais</strong>
+            <ul>
+                <li>mousse de maracuja com calda de chocolate</li>
+                <li>cheesecake de morango</li>
+                <li>pavê de chocolate com biscoitos</li>
+            </ul>
+        </li>
+    </ul>
 </body>
 </html>
