--- a/fundamentos-html/formularios/inputs.html
+++ b/fundamentos-html/formularios/inputs.html
@@ -40,6 +40,14 @@
         <label for="frontend">front-end</label><br>
         <input type="checkbox" name="interesses" id="mobile" value="mobile">
         <label for="mobile">mobile</label><br><br>
+
+        <!-- campo de data -->
+        <label for="datadenascimento">data de nascimento</label>
+        <input type="date" name="nascimento" id="datadenascimento"><br><br>
+
+        <!-- campo de arquivo (uploads) -->
+        <label for="fotodeperfil">foto de perfil</label>
+        <input type="file" name="avatar" id="fotodeperfil">
         <button type="submit">Enviar</button>
     </form>
 </body>
