--- a/fundamentos-html/exercicios/ex05/index.html
+++ b/fundamentos-html/exercicios/ex05/index.html
@@ -22,16 +22,16 @@
             <label for="whatsapp">Whatsapp:</label><br>
             <input type="tel" name="whatsapp" id="whatsapp"><br><br>
         </div>
-
+        
         <div>
-            <label for="atuacao">Área de atuação:</label><br>
-            <input type="radio" name="atuacao" id="desenvolvimento" value="desenvolvimento">
+            <label>Área de atuação:</label><br>
+            <input type="radio" name="area" id="desenvolvimento" value="desenvolvimento" required>
             <label for="desenvolvimento">desenvolvimento</label>
-            <input type="radio" name="atuacao" id="QualityAssurance" value="QualityAssurance">
+            <input type="radio" name="area" id="QualityAssurance" value="QualityAssurance" required>
             <label for="QualityAssurance">Quality Assurance (QA)</label>
-            <input type="radio" name="atuacao" id="analisedado" value="analisedado">
+            <input type="radio" name="area" id="analisedado" value="analisedado" required>
             <label for="analisedado">Análise de Dados</label>
-            <input type="radio" name="atuacao" id="Infraestrutura" value="Infraestrutura">
+            <input type="radio" name="area" id="Infraestrutura" value="Infraestrutura" required>
             <label for="Infraestrutura">Infraestrutura</label><br><br>
         </div>
 
