--- a/fundamentos-html/exercicios/ex05/index.html
+++ b/fundamentos-html/exercicios/ex05/index.html
@@ -36,6 +36,11 @@
         </div>
 
         <div>
+            <label form="observacoes">observações:</label><br>
+            <textarea name="observacoes" id="observacoes" cols="30" rows="4"></textarea>
+        </div>
+
+        <div>
             <input type="checkbox" name="notificacao" id="notificacao">
             <label for="notificacao">Desejo receber novidades e ofertas por email.</label><br>
         </div>
