--- a/fundamentos-html/exercicios/ex06/index.html
+++ b/fundamentos-html/exercicios/ex06/index.html
@@ -1,40 +1,66 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>exercico 06</title>
     <style>
-        img {
-            width: 400px;
-            height: 400px;
-        }
+      img {
+        width: 400px;
+        height: 400px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <p>Escritorio de contabilidade ABC</p>
-        <nav>
-            <a href="index.html">inico</a>
-            <a href="sobre.html">sobre nós</a>
-            <a href="servicos.html">serviços</a>
-            <a href="contato.html">conato</a>
-        </nav>
+      <p>Escritorio de contabilidade ABC</p>
+      <nav>
+        <a href="sobre.html">sobre nós</a>
+        <a href="servicos.html">serviços</a>
+        <a href="contato.html">conato</a>
+      </nav>
     </header>
-    <hr>
+    <hr />
 
     <main>
-        <img src="imagens/ilustracao.svg" alt="">
+      <img src="imagens/ilustracao.svg" alt="" />
 
-        <h1>Bem-vindo ao Escritorio de contabilidade ABC</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint nihil atque quas dolorem vitae ducimus vero natus minima minus iure eaque, id asperiores eos at, explicabo architecto laudantium sunt facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem harum porro, odit repellat aspernatur sed quibusdam obcaecati tenetur iste voluptate quas fugiat esse recusandae beatae cupiditate, magnam vero assumenda modi!</p>
+      <h1>Bem-vindo ao Escritorio de contabilidade ABC</h1>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint nihil
+        atque quas dolorem vitae ducimus vero natus minima minus iure eaque, id
+        asperiores eos at, explicabo architecto laudantium sunt facere. Lorem
+        ipsum dolor sit amet consectetur adipisicing elit. Exercitationem harum
+        porro, odit repellat aspernatur sed quibusdam obcaecati tenetur iste
+        voluptate quas fugiat esse recusandae beatae cupiditate, magnam vero
+        assumenda modi!
+      </p>
 
-        <h2>Missão</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, velit adipisci sequi similique vero modi ea unde voluptatum quod, harum ullam optio ratione delectus ipsam ex magni aliquam! Porro, praesentium?</p>
-        <h2>Visão</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolorum culpa qui, debitis eveniet sapiente enim beatae quibusdam pariatur delectus sunt nobis voluptatum, id rem voluptatem nulla, non eius reprehenderit.</p>
-        <h2>valores</h2>
-        
+      <h2>Missão</h2>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, velit
+        adipisci sequi similique vero modi ea unde voluptatum quod, harum ullam
+        optio ratione delectus ipsam ex magni aliquam! Porro, praesentium?
+      </p>
+      <h2>Visão</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolorum
+        culpa qui, debitis eveniet sapiente enim beatae quibusdam pariatur
+        delectus sunt nobis voluptatum, id rem voluptatem nulla, non eius
+        reprehenderit.
+      </p>
+      <h2>valores</h2>
+      <ul>
+        <li>compromisso com a etica e a trasnparencia</li>
+        <li>excelencia no atendimento e nos serviços prestados</li>
+        <li>inovação e atualisaçao constante</li>
+        <li>respeito e valorizaçao das pessoas</li>
+      </ul>
     </main>
-</body>
+    <hr>
+
+    <footer>
+        <p>&copy; 2023 Escritorio de contabilidade ABC</p>
+    </footer>
+  </body>
 </html>
