--- a/fundamentos-html/exercicios/ex06/contato.html
+++ b/fundamentos-html/exercicios/ex06/contato.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <p>Escritorio de contabilidade ABC</p>
+        <p><strong>Escritorio de contabilidade ABC</strong></p>
            <nav>
             <a href="index.html">inicio</a>
             <a href="sobre.html">sobre nos</a>
@@ -16,29 +16,31 @@
     </header>
     <hr>
     <main>
-        <h1>contato</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non alias quibusdam enim, repellendus a at, accusamus quisquam voluptatem harum nesciunt, beatae cum provident soluta magnam quas consequuntur rem excepturi praesentium!</p>
+        <section>
+            <h1>contato</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non alias quibusdam enim, repellendus a at, accusamus quisquam voluptatem harum nesciunt, beatae cum provident soluta magnam quas consequuntur rem excepturi praesentium!</p>
+            <h2>informaçoes de contato</h2>
+            <ul>
+                <li>Email: contato@gmail</li>
+                <li>Telefone: (99) 99999-9999</li>
+                <li>Endereço: rua das flores, 123 sao paulo/SP</li>
+            </ul>
+            <h2>horario de atendimento</h2>
+            <p>segunda a sexta, das 8h à 18h.</p>
+        </section>
 
-        <h2>informaçoes de contato</h2>
-        <ul>
-            <li>Email: contato@gmail</li>
-            <li>Telefone: (99) 99999-9999</li>
-            <li>Endereço: rua das flores, 123 sao paulo/SP</li>
-        </ul>
-
-        <h2>horario de atendimento</h2>
-        <p>segunda a sexta, das 8h à 18h.</p>
-
-        <h2>envie uma mensagem</h2>
-        <form action="">
-            <label for="nome">Nome</label>
-            <input type="text" name="nomen" id="nome">
-            <label for="Email">Email</label>
-            <input type="email" name="email" id="email">
-            <label for="mensagem">mensagem</label>
-            <textarea name="mensagem" id="mensagem" cols="20" rows="4"></textarea>
-            <button type="submit">enviar mensagem</button>
-        </form>    
+        <section>
+            <h2>envie uma mensagem</h2>
+            <form action="">
+                <label for="nome">Nome</label>
+                <input type="text" name="nomen" id="nome">
+                <label for="Email">Email</label>
+                <input type="email" name="email" id="email">
+                <label for="mensagem">mensagem</label>
+                <textarea name="mensagem" id="mensagem" cols="20" rows="4"></textarea>
+                <button type="submit">enviar mensagem</button>
+            </form>
+        </section>  
     </main>
 
     <hr>
