--- a/fundamentos-html/exercicios/ex06/index.html
+++ b/fundamentos-html/exercicios/ex06/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <p>Escritorio de contabilidade ABC</p>
+      <p><strong>Escritorio de contabilidade ABC</strong></p>
       <nav>
         <a href="sobre.html">sobre nós</a>
         <a href="servicos.html">serviços</a>
@@ -23,39 +23,42 @@
     <hr />
 
     <main>
-      <img src="imagens/ilustracao.svg" alt="" />
+      <section>
+          <img src="imagens/ilustracao.svg" alt="" />
+          <h1>Bem-vindo ao Escritorio de contabilidade ABC</h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint nihil
+            atque quas dolorem vitae ducimus vero natus minima minus iure eaque, id
+            asperiores eos at, explicabo architecto laudantium sunt facere. Lorem
+            ipsum dolor sit amet consectetur adipisicing elit. Exercitationem harum
+            porro, odit repellat aspernatur sed quibusdam obcaecati tenetur iste
+            voluptate quas fugiat esse recusandae beatae cupiditate, magnam vero
+            assumenda modi!
+          </p>
+      </section>
 
-      <h1>Bem-vindo ao Escritorio de contabilidade ABC</h1>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint nihil
-        atque quas dolorem vitae ducimus vero natus minima minus iure eaque, id
-        asperiores eos at, explicabo architecto laudantium sunt facere. Lorem
-        ipsum dolor sit amet consectetur adipisicing elit. Exercitationem harum
-        porro, odit repellat aspernatur sed quibusdam obcaecati tenetur iste
-        voluptate quas fugiat esse recusandae beatae cupiditate, magnam vero
-        assumenda modi!
-      </p>
-
-      <h2>Missão</h2>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, velit
-        adipisci sequi similique vero modi ea unde voluptatum quod, harum ullam
-        optio ratione delectus ipsam ex magni aliquam! Porro, praesentium?
-      </p>
-      <h2>Visão</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolorum
-        culpa qui, debitis eveniet sapiente enim beatae quibusdam pariatur
-        delectus sunt nobis voluptatum, id rem voluptatem nulla, non eius
-        reprehenderit.
-      </p>
-      <h2>valores</h2>
-      <ul>
-        <li>compromisso com a etica e a trasnparencia</li>
-        <li>excelencia no atendimento e nos serviços prestados</li>
-        <li>inovação e atualisaçao constante</li>
-        <li>respeito e valorizaçao das pessoas</li>
-      </ul>
+      <section>
+          <h2>Missão</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, velit
+            adipisci sequi similique vero modi ea unde voluptatum quod, harum ullam
+            optio ratione delectus ipsam ex magni aliquam! Porro, praesentium?
+          </p>
+          <h2>Visão</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolorum
+            culpa qui, debitis eveniet sapiente enim beatae quibusdam pariatur
+            delectus sunt nobis voluptatum, id rem voluptatem nulla, non eius
+            reprehenderit.
+          </p>
+          <h2>valores</h2>
+          <ul>
+            <li>compromisso com a etica e a trasnparencia</li>
+            <li>excelencia no atendimento e nos serviços prestados</li>
+            <li>inovação e atualisaçao constante</li>
+            <li>respeito e valorizaçao das pessoas</li>
+          </ul>
+      </section>
     </main>
     <hr>
 
