--- a/fundamentos-html/exercicios/ex06/servicos.html
+++ b/fundamentos-html/exercicios/ex06/servicos.html
@@ -1,40 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>exercico 06</title>
-</head>
-<body>
-
-   <header>
-    <p>Escritorio de contabilidade ABC</p>
-       <nav>
+  </head>
+  <body>
+    <header>
+      <p><strong>Escritorio de contabilidade ABC</strong></p>
+      <nav>
         <a href="index.html">inicio</a>
         <a href="sobre.html">sobre nos</a>
         <a href="contato.html">contato</a>
-       </nav>
-   </header>
-    <hr>
-   <main>
-    <h1>serviços</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad cumque commodi, praesentium aspernatur tempore ipsum pariatur non at natus vitae. Libero facilis, magni cum debitis nisi quos accusamus officia doloribus!</p>
+      </nav>
+    </header>
+    <hr />
+    <main>
+      <section>
+        <h1>serviços</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad cumque
+          commodi, praesentium aspernatur tempore ipsum pariatur non at natus
+          vitae. Libero facilis, magni cum debitis nisi quos accusamus officia
+          doloribus!
+        </p>
+      </section>
 
-    <h2>principais serviços</h2>
-    <ul>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, maiores blanditiis molestias aut quas voluptatibus id hic expedita corrupti accusantium laudantium molestiae sint facere rerum aspernatur harum totam delectus consectetur!</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, et libero labore suscipit facere distinctio magnam aut voluptates quidem itaque molestias mollitia deserunt iste amet eaque pariatur similique laudantium impedit.</li>
-        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, quaerat nemo pariatur in praesentium deserunt blanditiis dignissimos cumque necessitatibus eum illo ab veritatis assumenda mollitia. Blanditiis deserunt voluptatum qui numquam?</li>
-        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit voluptatum ratione atque voluptatibus consectetur earum asperiores quo quia repudiandae. Minima exercitationem repellendus minus natus iure quo? Quod fugit aut impedit?</li>
-        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam quisquam accusantium ratione aut ipsum itaque quis, harum sit aperiam quo id iste at voluptatem similique ipsa corrupti incidunt adipisci fuga.</li>
+      <section>
+        <h2>principais serviços</h2>
+        <ul>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
+            maiores blanditiis molestias aut quas voluptatibus id hic expedita
+            corrupti accusantium laudantium molestiae sint facere rerum
+            aspernatur harum totam delectus consectetur!
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, et
+            libero labore suscipit facere distinctio magnam aut voluptates
+            quidem itaque molestias mollitia deserunt iste amet eaque pariatur
+            similique laudantium impedit.
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo,
+            quaerat nemo pariatur in praesentium deserunt blanditiis dignissimos
+            cumque necessitatibus eum illo ab veritatis assumenda mollitia.
+            Blanditiis deserunt voluptatum qui numquam?
+          </li>
+          <li>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Reprehenderit voluptatum ratione atque voluptatibus consectetur
+            earum asperiores quo quia repudiandae. Minima exercitationem
+            repellendus minus natus iure quo? Quod fugit aut impedit?
+          </li>
+          <li>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+            quisquam accusantium ratione aut ipsum itaque quis, harum sit
+            aperiam quo id iste at voluptatem similique ipsa corrupti incidunt
+            adipisci fuga.
+          </li>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Perspiciatis, suscipit non vel eum aliquid blanditiis vitae quasi
+            debitis. Commodi quaerat magnam consectetur perspiciatis earum
+            tempore officia fuga dignissimos, doloremque consequatur.
+          </p>
+        </ul>
+      </section>
+    </main>
+    <hr />
 
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, suscipit non vel eum aliquid blanditiis vitae quasi debitis. Commodi quaerat magnam consectetur perspiciatis earum tempore officia fuga dignissimos, doloremque consequatur.</p>
-    </ul>
-   </main>
-   <hr>
-
-   <footer>
-    <p>&copy; 2023 Escritorio de contabilidade ABC</p>
-   </footer>
-</body>
+    <footer>
+      <p>&copy; 2023 Escritorio de contabilidade ABC</p>
+    </footer>
+  </body>
 </html>
