--- a/fundamentos-html/exercicios/ex06/sobre.html
+++ b/fundamentos-html/exercicios/ex06/sobre.html
@@ -1,35 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>exercico 06</title>
-</head>
-<body>
-    <p>Escritorio de contabilidade ABC</p>
+  </head>
+  <body>
+    <p><strong>Escritorio de contabilidade ABC</strong></p>
     <nav>
-        <a href="index.html">inicio</a>
-        <a href="servicos.html">serviços</a>
-        <a href="contato.html">contato</a>
+      <a href="index.html">inicio</a>
+      <a href="servicos.html">serviços</a>
+      <a href="contato.html">contato</a>
     </nav>
-    <hr>
+    <hr />
     <main>
+      <section>
         <h1>Sobre nos</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias temporibus eligendi reprehenderit dolorum, nesciunt, inventore enim doloribus culpa mollitia adipisci delectus officiis asperiores! Eum, magni repudiandae! Perspiciatis dolores nulla officia.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ad vero vitae eius in mollitia temporibus, explicabo perferendis aliquid veniam expedita autem esse, quibusdam similique, dolorum numquam aspernatur dignissimos sunt?</p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias
+          temporibus eligendi reprehenderit dolorum, nesciunt, inventore enim
+          doloribus culpa mollitia adipisci delectus officiis asperiores! Eum,
+          magni repudiandae! Perspiciatis dolores nulla officia.
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates
+          ad vero vitae eius in mollitia temporibus, explicabo perferendis
+          aliquid veniam expedita autem esse, quibusdam similique, dolorum
+          numquam aspernatur dignissimos sunt?
+        </p>
+      </section>
+      <section>
         <h2>por que escolher o Escritorio de contabilidade ABC?</h2>
         <ul>
-            <li>experiencia e conhecimento em diversos setores da economia</li>
-            <li>atendimento agial e delicado</li>
-            <li>confianaça e transparencia nas informaçoes prestados</li>
-            <li>parceria com o cliente para alcançar resutados solidos</li>
-            <li>compromisso com qualidade e a excelencia nos serviços</li>
-          </ul>
+          <li>experiencia e conhecimento em diversos setores da economia</li>
+          <li>atendimento agial e delicado</li>
+          <li>confianaça e transparencia nas informaçoes prestados</li>
+          <li>parceria com o cliente para alcançar resutados solidos</li>
+          <li>compromisso com qualidade e a excelencia nos serviços</li>
+        </ul>
+      </section>
     </main>
-    <hr>
+    <hr />
 
     <footer>
-        <p>&copy; 2023 Escritorio de contabilidade ABC</p>
+      <p>&copy; 2023 Escritorio de contabilidade ABC</p>
     </footer>
-</body>
+  </body>
 </html>
