--- a/fundamentos-css/03-seu-primeiro/index.html
+++ b/fundamentos-css/03-seu-primeiro/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>seu primeiro codigo css</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body> 
     <h1>seu primeiro codigo css</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quisquam molestias error quasi ipsum tempora nam doloremque totam libero. Velit alias modi omnis officia, vitae quibusdam sit ullam optio porro.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quisquam molestias error quasi ipsum tempora nam doloremque totam libero. Velit alias modi omnis officia, vitae quibusdam sit ullam optio porro.</p>dfd
 </body>
 </html>
