--- a/fundamentos-css/11-seletore-basicos/index.html
+++ b/fundamentos-css/11-seletore-basicos/index.html
@@ -30,10 +30,10 @@
         </p>
         <p class="verde">Este parágrafo está utilizando um seletor de classe.</p>
     </section>
-
+    
     <section>
         <form>
-            <input type="text" name="email" />
+            <input type="email" name="email" />
             <input type="password" name="password" />
         </form>
     </section>
