--- a/javascript-modulo-1/aula-42/parametro.html
+++ b/javascript-modulo-1/aula-42/parametro.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Parâmetros de uma função</h1>
     <script src="parametro.js"></script>
 </body>
 </html>
