--- a/javascript-modulo-2/05-criando-elementos/index.html
+++ b/javascript-modulo-2/05-criando-elementos/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Criando  novos elementos no dom</h1>
 
-    <button onclick="addInput()">adicionar input</button>
-    <ul id="inputs"></ul>
-    <script src="index.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Criando Novos Elementos no DOM</title>
+  <script src="./index.js"></script>
+</head>
+
+<body>
+  <h1>Criando Novos Elementos no DOM</h1>
+
+  <button onclick="addInput()">Adicionar Input</button>
+
+  <ul id="inputs"></ul>
 </body>
+
 </html>
