--- a/javascript-modulo-2/06-praticando-dom/index.html
+++ b/javascript-modulo-2/06-praticando-dom/index.html
@@ -12,7 +12,7 @@
     
     <h2>minha agenda</h2>
     <button onclick="addContact()">novo contato</button>
-    <button onclick="deleteContact()">remover contato</button>
+    <button onclick="removeContact()">remover contato</button>
     
     <section id="contacts-list"></section>
 </body>
